Use Hamcrest assertThat, use Java16 stream .toList()